# hw1-orchestra

./: .gitignore  PLAN.md  README.md  REQUIREMENTS.md  TODO.md  pyproject.toml  requirements.txt
.cursor/rules/: segal-professional-standards.mdc
config/: default.json  experiments.json
results/generalization/: comparison.json  holdout_split_metrics.csv  holdout_split_metrics.json  random_split_metrics.csv  random_split_metrics.json
results/metrics/: model_comparison.csv  model_comparison.json
scripts/: run_comparison.py  run_experiment.py  run_generalization_check.py
src/ai_orchestra/: __init__.py  __main__.py  baseline.py  comparison.py  comparison_internals.py  comparison_io.py  comparison_plotting.py  config.py  dataloaders.py  dataset.py  defaults.py  evaluation.py  experiment_runner.py  experiments.py  fc_plotting.py  lstm_baseline.py  lstm_plotting.py  model_entries.py  models.py  overfit.py  plotting.py  prediction_sampling.py  rnn_baseline.py  rnn_plotting.py  sdk.py  sequence_baseline.py  sequence_dataset.py  sequence_plotting.py  signal_sets.py  signals.py  splits.py  training.py
tests/integration/: test_comparison.py  test_evaluate_per_class.py  test_experiment_runner.py  test_fc_baseline.py  test_fc_overfit.py  test_fc_training_smoke.py  test_lstm_baseline.py  test_lstm_training_smoke.py  test_rnn_baseline.py  test_rnn_training_smoke.py
tests/unit/: test_comparison_io.py  test_comparison_plotting.py  test_config.py  test_dataloaders.py  test_dataset_one_hot.py  test_dataset_sizes.py  test_dataset_split.py  test_dataset_windows.py  test_defaults.py  (+19 more)
(+3 files in other folders)
